Alignments fixed

--- a/style.css
+++ b/style.css
@@ -3,17 +3,27 @@
  * {
     border: 1px solid rgb(126, 126, 126);
 }
-
 header {
+    background-color: rgb(245, 245, 245);
+    border-right: 20px solid rgb(209, 209, 20);;
+    position: fixed;
+    width: 100%;
+}
+#headeritems {
     display: flex;
 }
 #logopic {
-    height: 70px;
+    height: 60px;
     width: 200px;
 }
-h1 {
-    margin-left: 200px;
+
+#searchbar {
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: 20px;
+    text-align: left;
 }
+
 #signup {
     height: 35px;
     background-color: orange;
@@ -23,39 +33,31 @@ h1 {
 
 #sign_in {
     height: 25px;
-    background-color: yellow;
+    background-color: rgb(255, 255, 157);
     margin: 10px;
     border-radius: 10px;
 }
 
-
-search {
-    background-color: yellow;
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: 0px;
-    text-align: left;
-}
-
 body {
-    background-color: rgb(231, 231, 231);
+    background-color: rgb(209, 209, 209);
+    margin: 0px;
     text-align: center;
 }
 
 main {
     background-color: red;
-    border: 10px green;
+    margin-top: 100px;
 }
 
 menu {
+    background-color: rgb(245, 245, 245);
     width: 200px;
     padding-left: 0;
     position: fixed;
-    top: -10px;
+    margin-top: -15px;
 }
 
 article {
-    border: 10px green;
     margin-left: 200px;
 }
 
